// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should AddReviewForm render correctly should render basic 1`] = `
<form
  action="#"
  className="add-review__form"
  disabled={false}
  onChange={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        className="rating__input"
        id="star-1"
        name="rating"
        type="radio"
        value={1}
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        className="rating__input"
        id="star-2"
        name="rating"
        type="radio"
        value={2}
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        className="rating__input"
        id="star-3"
        name="rating"
        type="radio"
        value={3}
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        className="rating__input"
        id="star-4"
        name="rating"
        type="radio"
        value={4}
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        className="rating__input"
        id="star-5"
        name="rating"
        type="radio"
        value={5}
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="text"
      placeholder="Review text"
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`Should AddReviewForm render correctly should render with sending error 1`] = `
<form
  action="#"
  className="add-review__form"
  disabled={false}
  onChange={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <div>
    <p>
      Error sending comment
    </p>
  </div>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        className="rating__input"
        id="star-1"
        name="rating"
        type="radio"
        value={1}
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        className="rating__input"
        id="star-2"
        name="rating"
        type="radio"
        value={2}
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        className="rating__input"
        id="star-3"
        name="rating"
        type="radio"
        value={3}
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        className="rating__input"
        id="star-4"
        name="rating"
        type="radio"
        value={4}
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        className="rating__input"
        id="star-5"
        name="rating"
        type="radio"
        value={5}
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="text"
      placeholder="Review text"
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`Should AddReviewForm render correctly should render with submit disabled 1`] = `
<form
  action="#"
  className="add-review__form"
  disabled={false}
  onChange={[Function]}
  style={
    Object {
      "opacity": 0.5,
    }
  }
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        className="rating__input"
        id="star-1"
        name="rating"
        type="radio"
        value={1}
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        className="rating__input"
        id="star-2"
        name="rating"
        type="radio"
        value={2}
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        className="rating__input"
        id="star-3"
        name="rating"
        type="radio"
        value={3}
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        className="rating__input"
        id="star-4"
        name="rating"
        type="radio"
        value={4}
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        className="rating__input"
        id="star-5"
        name="rating"
        type="radio"
        value={5}
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="text"
      placeholder="Review text"
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.5,
          }
        }
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;
